welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: ';' expected but '{' found.
while (!croisement()) {avance()}
                      ^