welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var bugg=0
avance()
do {avance()}

while (!croisement()) {avance()}

